# synthesia

./: .env  .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt  server.py
configs/: config.py  logging.py
service/: models.py  queue.py  rate_limiter.py  service.py  webhook_manager.py
tests/: general_test.sh  results.csv  test_rate_limit.sh
upstream/: synthesia_api.py
utils/: auth.py  helpers.py
